# cleonos

./: .clang-format  .gitignore  CMakeLists.txt  Makefile  gdb.txt
.VSCodeCounter/2026-04-14_20-12-49/: details.md  diff-details.md  diff.csv  diff.md  diff.txt  results.csv  results.json  results.md  results.txt
.VSCodeCounter/2026-04-18_19-50-42/: details.md  diff-details.md  diff.csv  diff.md  diff.txt  results.csv  results.json  results.md  results.txt
.github/workflows/: build-os.yml  style-check.yml
cleonos/c/: kelf.ld  stub.c  user.ld
cleonos/c/apps/: ansi_main.c  ansitest_main.c  append_main.c  bg_main.c  cat_main.c  cd_main.c  clear_main.c  cmd_runtime.c  cmd_runtime.h  cp_main.c  cut_main.c  dltest_main.c  dmesg_main.c  elfrunner_kmain.c  elfrunner_main.c  exec_main.c  exit_main.c  fastfetch_main.c  fg_main.c  fsstat_main.c  grep_main.c  head_main.c  hello_main.c  help_main.c  jobs_main.c  kbdstat_main.c  kdbg_main.c  kill_main.c  libctest_main.c  libdemo_main.c  ls_main.c  memc_kmain.c  memc_main.c  memstat_main.c  mkdir_main.c  mv_main.c  pid_main.c  procstat_main.c  ps_main.c  pwd_main.c  (+23 more)
cleonos/c/apps/shell/: shell_cmd.c  shell_external.c  shell_input.c  shell_internal.h  shell_path.c  shell_util.c
cleonos/c/apps/shell/cmd/: fastfetch_print_logo.inc
cleonos/c/include/: cleonos_rust_bridge.h  cleonos_stdio.h  cleonos_syscall.h  ctype.h  dlfcn.h  stdio.h  stdlib.h  string.h
cleonos/c/src/: dlfcn.c  libc_ctype.c  libc_stdlib.c  libc_string.c  runtime.c  stdio.c  syscall.c
cleonos/rust/: Cargo.toml
cleonos/rust/src/: lib.rs
clks/arch/aarch64/: linker.ld
clks/arch/x86_64/: boot.c  exec_stack_call.S  interrupt_stubs.S  linker.ld
clks/drivers/audio/: pcspeaker.c
clks/drivers/serial/: serial.c
clks/drivers/video/: font8x8.c  font8x8.h  framebuffer.c  psf_font.c  psf_font.h
clks/include/clks/: audio.h  boot.h  compiler.h  cpu.h  desktop.h  driver.h  elf64.h  elfrunner.h  exec.h  framebuffer.h  fs.h  interrupts.h  kelf.h  kernel.h  keyboard.h  limine.h  log.h  mouse.h  panic.h  ramdisk.h  scheduler.h  serial.h  service.h  shell.h  string.h  syscall.h  task.h  tty.h  types.h  userland.h
clks/kernel/: desktop.c  driver.c  elf64.c  elfrunner.c  exec.c  fs.c  heap.c  interrupts.c  kelf.c  keyboard.c  kmain.c  limine_requests.c  log.c  mouse.c  panic.c  pmm.c  ramdisk.c  scheduler.c  service.c  shell.c  syscall.c  tty.c  userland.c
clks/lib/: libc_compat.c  string.c
clks/rust/src/: lib.rs
cmake/: check_tools.cmake  gen_kernel_symbols.cmake  log.cmake  log_emit.cmake  setup_limine.cmake
configs/: limine.conf
configs/menuconfig/: clks_features.json
docs/: README.md  stage1.md  stage10.md  stage12.md  stage15.md  stage23.md  stage24.md  stage25.md  stage26.md  stage29.md  stage3.md  stage4.md  stage5.md  stage6.md  stage7.md  syscall.md
ramdisk/: README.txt
ramdisk/shell/: init.cmd
ramdisk/system/: tty.psf
scripts/: gen-tty-psf.ps1  menuconfig.py
wine/: README.md  __tmp_raw.txt  cleonos_wine.py
wine/cleonos_wine_lib/: __init__.py  cli.py  constants.py  input_pump.py  platform.py  runner.py  state.py
